Added demo notice and 404 page

--- a/public/projects.html
+++ b/public/projects.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
     <script src="projects.js" defer></script>
-    <style type="text/css">
+    <style>
       a {
         color: #20c997;
       }
@@ -59,7 +59,8 @@
         <h1 class="display-4">Projects</h1>
         <p class="lead">
           Projects' information below is updated dynamically via Gitlab's API and
-          is guaranteed to be up-to-date.
+          is guaranteed to be up-to-date. Some projects have online demo available 
+          in the 'Learn More' section.
         </p>
       </div>
       <div class="text-light d-flex flex-wrap justify-content-around">
