Fixed 404 nav-link highlight and added demo info

--- a/public/projects.html
+++ b/public/projects.html
@@ -14,7 +14,7 @@
       a {
         color: #20c997;
       }
-      pre code {
+      code {
         color: #e83e8c;
       }
       .fade-leave-active {
@@ -40,6 +40,9 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Projects <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="demoinfo.html">Demo Info</a>
         </li>
       </ul>
     </nav>
