--- a/public/404.html
+++ b/public/404.html
@@ -12,8 +12,11 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand"><img src="styles/logo.png" style="max-height: 2rem;"/></a>
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="demoinfo.html">Demo Info</a>
         </li>
       </ul>
     </nav>
