--- a/public/projects.html
+++ b/public/projects.html
@@ -17,6 +17,9 @@
       code {
         color: #e83e8c;
       }
+      pre code {
+        color: white;
+      }
       .fade-leave-active {
         transition: opacity 0.5s;
       }
@@ -127,7 +130,7 @@
         <div v-if="modal.title !== null" @click="dropDownTrigger = !dropDownTrigger"
             class="modal" tabindex="-1" role="dialog"
             aria-labelledby="modaltitle" aria-hidden="true" style="display: block;">
-          <div class="modal-dialog modal-dialog-scrollable">
+          <div class="modal-dialog modal-dialog-scrollable" style="height: calc(100% - 1rem);">
             <div class="modal-content bg-dark">
               <div class="modal-header">
                 <h5 id="modaltitle" class="modal-title" v-show="modal.title" style="display: none;">
@@ -140,10 +143,11 @@
                   &times;
                 </button>
               </div>
-              <div class="modal-body" @scroll="dropDownTrigger = !dropDownTrigger">
+              <div class="modal-body" @scroll="dropDownTrigger = !dropDownTrigger"
+                  :style="modal.body === null ? 'overflow: hidden;' : ''">
                 <p v-html="modal.body"></p>
                 <div v-show="modal.body === null" class="justify-content-center align-items-center"
-                    style="display: none;" :style="'width: 100%; display: flex;'">
+                    style="display: none;" :style="'width: 100%; height: 100%; display: flex;'">
                   <div class="spinner-border text-primary" role="status">
                     <span class="sr-only">Loading...</span>
                   </div>
